tests/cases/negative/types/typeBadLevelSimple.lam
-- Type 0 cannot belong to Type 0, it must instead be in Type 1
bad : Type 0
bad = Type 0
